--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ body {
 
       <div class="jumbotron">
         <h1>Chai's Review: Under the Dome</h1>
-        <p class="lead">This subtitle translation project aims to enable non-Chinese audiences to learn about the air quality conditions China is facing, throught the investigation brought by Chai Jing, a Chinese television celebrity.</p>
+        <p class="lead">This subtitle translation project aims to enable non-Chinese audiences to learn about the air quality conditions China is facing, through the investigation brought by Chai Jing, a Chinese television celebrity.</p>
         <a href="https://www.youtube.com/watch?v=T6X2uwlQGQM"><button type="button" class="btn btn-success">We're done on YouTube</button></a>
       </div>
 
